[gd_scene load_steps=10 format=1]

[ext_resource path="res://9frame1.png" type="Texture" id=1]
[ext_resource path="res://gui/TownGui.gd" type="Script" id=2]
[ext_resource path="res://fonts/Knights Quest.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/Timeless-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = 16.0
content_margin/right = 16.0
content_margin/top = 16.0
content_margin/bottom = 8.0
texture = ExtResource( 1 )
margin/left = 16.0
margin/right = 16.0
margin/top = 24.0
margin/bottom = 16.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="DynamicFont" id=2]

font/size = 32
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="DynamicFont" id=4]

font/size = 32
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]

font/size = 16
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 4 )

[node name="Info" type="PanelContainer"]

editor/display_folded = true
visibility/blend_mode = 1
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -368.0
margin/top = 48.0
margin/right = -720.0
margin/bottom = -144.0
custom_styles/panel = SubResource( 1 )

[node name="box" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 16.0
margin/right = 336.0
margin/bottom = 206.0
alignment = 0
script/script = ExtResource( 2 )

[node name="Name" type="HBoxContainer" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 33.0
alignment = 0

[node name="NameLabel" type="Label" parent="box/Name"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 255.0
margin/bottom = 33.0
custom_fonts/font = SubResource( 2 )
text = "Town Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NameEdit" type="LineEdit" parent="box/Name/NameLabel"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="RenameButton" type="Button" parent="box/Name"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 259.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 33.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "rename"
flat = false

[node name="level" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 37.0
margin/right = 320.0
margin/bottom = 55.0
custom_fonts/font = SubResource( 5 )
text = "Level X"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="population" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 59.0
margin/right = 320.0
margin/bottom = 77.0
custom_fonts/font = SubResource( 5 )
text = "Pop.: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="produces" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 81.0
margin/right = 320.0
margin/bottom = 95.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="imports" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 99.0
margin/right = 320.0
margin/bottom = 113.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="exports" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 117.0
margin/right = 320.0
margin/bottom = 131.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NeedsLabel" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 135.0
margin/right = 320.0
margin/bottom = 153.0
custom_fonts/font = SubResource( 5 )
text = "Resources needed for level X"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Needs" type="GridContainer" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 157.0
margin/right = 320.0
margin/bottom = 157.0
columns = 8

[node name="HSeparator" type="HSeparator" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 161.0
margin/right = 320.0
margin/bottom = 164.0

[node name="AvailableLabel" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 168.0
margin/right = 320.0
margin/bottom = 186.0
custom_fonts/font = SubResource( 5 )
text = "Resources Available:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Available" type="GridContainer" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 190.0
margin/right = 320.0
margin/bottom = 190.0
columns = 8

[connection signal="text_entered" from="box/Name/NameLabel/NameEdit" to="box" method="_on_NameEdit_text_entered"]

[connection signal="pressed" from="box/Name/RenameButton" to="box" method="_on_RenameButton_pressed"]


